Change findCandidateKey into class. Integrate NFTester with keyfinding

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="js/external/jquery-1.10.2.js"></script>
     <script src="js/external/jquery-ui.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <script src="js/findCandidateKey.js"></script>
     <script src="js/NFTester.js"></script>
     <script src="js/canvasDraw.js"></script>
     <script src="js/canvasTest.js"></script>
@@ -12,7 +13,7 @@
     <script src="js/animationTest.js"></script>
 </head>
 <body>
-    <div style="height:200px">
+    <div style="height:300px;">
         <div id="main_canvas">
             <div class="box variables">
                 List of attributes : 
@@ -28,8 +29,8 @@
             <ul id="clickable_buttons">
             </ul>
         </div>
+        <div id="annotation_text"></div>
     </div>
-    <div id="annotation_text"></div>
 </body>
 </html>
 
