--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -5,6 +5,7 @@
     <script src="js/external/jquery-1.10.2.js"></script>
     <script src="js/external/jquery-ui.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <script src="js/Utility.js"></script>
     <script src="js/findCandidateKey.js"></script>
     <script src="js/NFTester.js"></script>
     <script src="js/canvasDraw.js"></script>
