--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/canvasTest.js"></script>
     <script src="js/animationWidget.js"></script>
     <script src="js/animationTest.js"></script>
+    <script src="js/MinimalCover.js"></script>
 </head>
 <body>
     <div style="height:300px;">
