--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -14,6 +14,7 @@
     <script src="js/animationWidget.js"></script>
     <script src="js/animationTest.js"></script>
     <script src="js/MainButton.js"></script>
+    <script src="js/BernsteinAlgorithm.js"></script>
 </head>
 <body>
     <div id="input_canvas">
