--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -13,29 +13,33 @@
     <script src="js/canvasTest.js"></script>
     <script src="js/animationWidget.js"></script>
     <script src="js/animationTest.js"></script>
-    <script src="js/MainButton.js"></script>
-    <script src="js/BernsteinAlgorithm.js"></script>
     <script src="js/MinimalCover.js"></script>
+    <script src="js/BernsteinAlgorithm.js"></script>
+    <script src="js/MainButton.js"></script>
+    
 </head>
 <body>
  <div style="width:100%; height:780px; overflow:hidden">
     <div id="inner-box">
         <div id="input_box">
             <div id="input_box_inner">
-                <div id="add_attribute">
-                    <div>Attributes to add :</div>
-                    <input id="attribute_form"></input>
-                    <button onclick=addAttribute()>Add attribute</button>
-                </div>
-                <div id="add_fd">
-                    <div>Functional Dependency to add :</div>
-                    <input id="fd_left_form"></input>-><input id="fd_right_form"></input>
-                    <button onclick=addFD()>Add functional dependency</button>
+                <div id="input_box_edit">
+                    <div id="add_attribute">
+                        <div>Attributes to add :</div>
+                        <input id="attribute_form"></input>
+                        <button onclick=addAttribute()>Add attribute</button>
+                    </div>
+                    <div id="add_fd">
+                        <div>Functional Dependency to add :</div>
+                        <input id="fd_left_form"></input>-><input id="fd_right_form"></input>
+                        <button onclick=addFD()>Add functional dependency</button>
+                    </div>
                 </div>
                 <div id="operation_buttons">
                     <input id="closure_form"></input>
                     <button onclick=findClosure()>Find the closure</button>
-                    <button onclick=test()>Test</button>
+                    <button onclick=test(1)>Sample 1</button>
+                    <button onclick=test(2)>Example 1</button>
                     <button onclick=bernsteinAlgorithm()>Bernstein Algorithm</button>
                 </div>
             </div>
@@ -116,7 +120,7 @@ function bernsteinAlgorithm() {
     mB.bernsteinAlgorithm();
 }
 
-function test() {
-    mB.test();
+function test(sampleID) {
+    mB.test(sampleID);
 }
 </script>
