--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -34,12 +34,19 @@
                         <input id="fd_left_form"></input>-><input id="fd_right_form"></input>
                         <button onclick=addFD()>Add functional dependency</button>
                     </div>
+                    <div id="sampels">
+                        Load samples :
+                        <button onclick=test(1)>Sample 1</button>
+                        <button onclick=test(2)>Example 1</button>
+                        <button onclick=test(3)>Example 2</button>
+                    </div>
+                </div>
+                <div id="stop_button">
+                    <button onclick=stopExplorationMode()>Stop Exploration Mode</button>
                 </div>
                 <div id="operation_buttons">
                     <input id="closure_form"></input>
                     <button onclick=findClosure()>Find the closure</button>
-                    <button onclick=test(1)>Sample 1</button>
-                    <button onclick=test(2)>Example 1</button>
                     <button onclick=bernsteinAlgorithm()>Bernstein Algorithm</button>
                 </div>
             </div>
@@ -113,14 +120,30 @@ function findClosure() {
     for (var i = 0; i < attributes.length; ++i) {
         attributes[i] = attributes[i].trim();
     }
+    startExplorationMode();
     mB.findClosure(attributes);
 }
 
 function bernsteinAlgorithm() {
+    startExplorationMode();
     mB.bernsteinAlgorithm();
 }
 
 function test(sampleID) {
     mB.test(sampleID);
 }
+
+function stopExplorationMode() {
+    $("#stop_button").hide();
+    $("#input_box_edit").show();
+}
+
+function startExplorationMode() {
+    $("#stop_button").show();
+    $("#input_box_edit").hide();
+}
+
+$(document).ready(function() {
+    stopExplorationMode();
+});
 </script>
