Added NFTester to index

--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -47,7 +47,10 @@
                 <div id="operation_buttons">
                     <input id="closure_form"></input>
                     <button onclick=findClosure()>Find the closure</button>
+                    <br/>
                     <button onclick=bernsteinAlgorithm()>Bernstein Algorithm</button>
+                    <button onclick=NFTesterMB(2)>2NF Tester</button>
+                    <button onclick=NFTesterMB(3)>3NF Tester</button>
                 </div>
             </div>
         </div>
@@ -131,6 +134,11 @@ function bernsteinAlgorithm() {
 
 function test(sampleID) {
     mB.test(sampleID);
+}
+
+function NFTesterMB(testerID) {
+    startExplorationMode();
+    mB.NFTesterMB(testerID);
 }
 
 function stopExplorationMode() {
