--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -71,7 +71,7 @@
                 <div class="box variables">
                     <div id="box_variables_inner">
                         List of attributes : 
-                        <div id="variables"></div>
+                        <ul id="variables"></ul>
                     </div>
                 </div>
             <div class="box dependencies">
