Added step messages for NFTester and Bernstein Algorithm:

--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -41,6 +41,7 @@
                         <button onclick=test(3)>Example 3</button>
                         <button onclick=test(4)>Example 4</button>
                         <button onclick=test(5)>Example 5</button>
+                        <button onclick=test(6)>Example 6</button>
                     </div>
                     <div id="remove_attribute">
                         <select id='remove_attribute_form'>
