Added BCNF test

--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -64,6 +64,7 @@
                     <button onclick=bernsteinAlgorithm()>Bernstein Algorithm</button>
                     <button onclick=NFTesterMB(2)>2NF Tester</button>
                     <button onclick=NFTesterMB(3)>3NF Tester</button>
+                    <button onclick=NFTesterMB(5)>BCNF Tester</button>
                 </div>
             </div>
         </div>
