Cooler animation. Red color to indicate which step is drawed. Can use arrow to navigate

--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -200,4 +200,14 @@ function startExplorationMode() {
 $(document).ready(function() {
     stopExplorationMode();
 });
+
+$(document).keyup(function(event) {
+    var UP = 38;
+    var DOWN = 40;
+    if (event.which == UP) {
+        animationWidget.prev();
+    } else if (event.which == DOWN) {
+        animationWidget.next();
+    }
+});
 </script>
