--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -166,7 +166,7 @@
 
                       <div id="step_buttons">
                           <div id="step_buttons_inner">
-                              Step Buttons :
+                              <b>Step buttons :</b>
                               <ul id="clickable_buttons">
                               </ul>
                           </div>
