--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -27,15 +27,11 @@
 <body>
 
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
-  <div class="container">
-    <div class="navbar-header">
+  <div class="container" >
+    <div class="navbar-header" style="width:90%; margin:auto;">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">VisuDB</a>
+      <a href="#" class="navbar-brand" style="width:90%; margin:auto;">VisuDB</a>
     </div>
    
   </div>
@@ -50,7 +46,7 @@
     <div class="col-md-12"> 
       
       <div class="panel">
-        <div class="panel-body">
+        <div class="panel-body" style="padding:0px">
       
           <!--/stories-->
           <div class="row">    
