--- a/indexJonathan.html
+++ b/indexJonathan.html
@@ -18,11 +18,11 @@
     <script src="js/BernsteinAlgorithm.js"></script>
     <script src="js/MainButton.js"></script>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+    <!--<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">-->
     <!--[if lt IE 9]>
         <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="css/styles.css" rel="stylesheet">
+    <!--<link href="css/styles.css" rel="stylesheet">-->
 </head>
 <body>
 
@@ -139,7 +139,7 @@
 
 
     <!-- script references -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>-->
         <script src="js/bootstrap.min.js"></script>
     </body>
 </html>
@@ -252,10 +252,12 @@ $(document).ready(function() {
 
 $(document).keyup(function(event) {
     var UP = 38;
+    var RIGHT = 39;
+    var LEFT = 37;
     var DOWN = 40;
-    if (event.which == UP) {
+    if (event.which == LEFT) {
         animationWidget.prev();
-    } else if (event.which == DOWN) {
+    } else if (event.which == RIGHT) {
         animationWidget.next();
     }
 });
