Added left/right button node

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                       <div id="step_buttons">
                           <div id="step_buttons_inner">
-                              <b>Step buttons :</b>
+                              <b>Step buttons <small>(Use left/right buttons to navigate)</small> :</b>
                               <ul id="clickable_buttons">
                               </ul>
                           </div>
