added html arrow symbols

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                   </div>
                                   <div id="add_fd" style="margin-bottom: 10px">
                                       <div><b>Functional Dependency to add :</b></div>
-                                      <input id="fd_left_form"></input>-><input id="fd_right_form"></input>
+                                      <input id="fd_left_form"></input>&nbsp<font size="5px"><b>&#8594</b></font>&nbsp<input id="fd_right_form"></input>
                                       <button onclick=addFD()>Add functional dependency</button>
                                   </div>
                                   <div id="sampels" style="margin-bottom:10px;">
