--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ function clearAll() {
     stopExplorationMode();
     canvasDraw.clearCanvas();
     canvasDraw.clearButtons();
+    mB.deleteAll();
 }
 
 $(document).ready(function() {
